' Generated by UML Generator
' Encoded: jLTRRnif57xFhq3A2zvuglJLqbPrDyrkgaIAugWlKHxm377PCc01uyRjzh_luJ833ECegjMNnCEvy9tR1xpNXYZJjVn4VsLYInHfKSs9rajZ55jtXbxLKgpOTuhEJxwmXgAQgPhJanEdXIuPf_yGqN2gq8yJXCv-W4F3wfz8KTAizjhGzbB9rkhX9_WZI4iNQ0NEnMQsGDTCKAAyNcR-JJ53xwZkkBcNazPpsCAA5yYhpP5sRdAdiCTEiWPyLuFlbe23vtlvcTP6Akm_5-Z6_GS3lrx2kGbs1-0KVjp6F_jK_KqwhLSKSiXNak_wX6dx6n-0xYCR-uZM5LJCCC9lsKuQ0B50Qoav9GBzYOpgg5Mft2xKtEQg-91fpDYhi8r0u6MVW3bQzwc4Kibl2yI4ARBoYTHopNuX8MIjZIAryUtQwqK_fr0m1SMJGhkTxL8jssrdtE8ziwNZKcoie2NFLxaw9F3j-Vcv5Hf8YoAY1lr6TcjEhOnMRyzZTb-LfxCDDN4NFEjXsVM_ScHM6B3Pqjsay709DYqPXNa9U761F2gUxWXd3J7KuyGlpyvfJNZTSU96aZKTuPC6C8AITnPNN_bPlxFDrIldRkYDjARBxTPtVDqfHOLPJMoVYEyoQh02sHd8y19eQO4-tTDdzpEYkX8W3P9BHhbZZ9q3D2boTHy1n3ChOOBPQG3Aj4ML0j2uOlSq17pwn3QTeg68E-eTODT5Qf65dLGseIycC54RtLFFmsCnLjUID9QchXaaHlIZ1UC2jRcbwacgbZOO-cBfbZxkwCHitX01bNRX7-N7iTPH7ZnB70_2q-zHVfQ2yFttunAx8hlZ7AHTxyTYe5txiKxEiAnJ_QnFKVGi4D7IjkhWoQvymDcH22lsEf3GbxPMo_6vvmKVy3gXWbvWf6zSwyJ_IflEUl510J-Hb43W51d87EQ8nmyNf3V5WzOS3JgpH9vwVNY4uGbXtO7Tc9NvQ0MpuFdVddW7T3RSaNYEW6Mx2VOzg-LsdsSQ3ZEXjrBJVBa5-c9RliVIVB7aC2Gvgf2cUK4wq0PqlZ3CxB66ylNe9_G0HoFRwIncWCiYkbNBUj3EXoliETbNU7nUE4AcMfCDJRnMvLbU7JhBAnLEgBHn6WeEMYQ8C5a_4V4rRo6F3OzXmUKk1pL78qWsInE0Ph_3gRlvPZ7sBRmAMnGZU-DtoclrQ_SHEodz9I3hVn1Sn3mNiZj8TiuQgVP4XN8cSUP3mLv99f_z9KUE7oUlk_m4QyX1lCF5ST8NZ6mad0PyVo5352aBXkjqPZHSezBGKwEOiTB6PI1LjfaSXpg0zVFb0asnJ4sNw_onFSvDYsPrBSUqCyDvk9Fz5e6wllG52JV1o4Z9OaxJi-cp9rBoGIe-HC6DDBTADbrjUlOihwnd0exZl9CJjXtquwZfRkrU9I-e38okeR949SYYZf5BfSW-xlpmcFN44poflSOeIxcJgS58N-nlthpBBz1ZOUZxyN8u1CRBOUloeLjL_xtBhhKJEWMMQPM0A7q87_B-ejyNFIOnZfT3ZDcpjGIGYGi4XJH0oDwmXLKXFMGL81Rh8QBng-gFgZgyKQymiPSL9I1zuDd5r1hccyRr03BSzX9uWRqIdKZYHKvoKS7NkJXi4FZ75IrVIfBtdegcQ_d_
' URL: http://www.plantuml.com/plantuml/uml/jLTRRnif57xFhq3A2zvuglJLqbPrDyrkgaIAugWlKHxm377PCc01uyRjzh_luJ833ECegjMNnCEvy9tR1xpNXYZJjVn4VsLYInHfKSs9rajZ55jtXbxLKgpOTuhEJxwmXgAQgPhJanEdXIuPf_yGqN2gq8yJXCv-W4F3wfz8KTAizjhGzbB9rkhX9_WZI4iNQ0NEnMQsGDTCKAAyNcR-JJ53xwZkkBcNazPpsCAA5yYhpP5sRdAdiCTEiWPyLuFlbe23vtlvcTP6Akm_5-Z6_GS3lrx2kGbs1-0KVjp6F_jK_KqwhLSKSiXNak_wX6dx6n-0xYCR-uZM5LJCCC9lsKuQ0B50Qoav9GBzYOpgg5Mft2xKtEQg-91fpDYhi8r0u6MVW3bQzwc4Kibl2yI4ARBoYTHopNuX8MIjZIAryUtQwqK_fr0m1SMJGhkTxL8jssrdtE8ziwNZKcoie2NFLxaw9F3j-Vcv5Hf8YoAY1lr6TcjEhOnMRyzZTb-LfxCDDN4NFEjXsVM_ScHM6B3Pqjsay709DYqPXNa9U761F2gUxWXd3J7KuyGlpyvfJNZTSU96aZKTuPC6C8AITnPNN_bPlxFDrIldRkYDjARBxTPtVDqfHOLPJMoVYEyoQh02sHd8y19eQO4-tTDdzpEYkX8W3P9BHhbZZ9q3D2boTHy1n3ChOOBPQG3Aj4ML0j2uOlSq17pwn3QTeg68E-eTODT5Qf65dLGseIycC54RtLFFmsCnLjUID9QchXaaHlIZ1UC2jRcbwacgbZOO-cBfbZxkwCHitX01bNRX7-N7iTPH7ZnB70_2q-zHVfQ2yFttunAx8hlZ7AHTxyTYe5txiKxEiAnJ_QnFKVGi4D7IjkhWoQvymDcH22lsEf3GbxPMo_6vvmKVy3gXWbvWf6zSwyJ_IflEUl510J-Hb43W51d87EQ8nmyNf3V5WzOS3JgpH9vwVNY4uGbXtO7Tc9NvQ0MpuFdVddW7T3RSaNYEW6Mx2VOzg-LsdsSQ3ZEXjrBJVBa5-c9RliVIVB7aC2Gvgf2cUK4wq0PqlZ3CxB66ylNe9_G0HoFRwIncWCiYkbNBUj3EXoliETbNU7nUE4AcMfCDJRnMvLbU7JhBAnLEgBHn6WeEMYQ8C5a_4V4rRo6F3OzXmUKk1pL78qWsInE0Ph_3gRlvPZ7sBRmAMnGZU-DtoclrQ_SHEodz9I3hVn1Sn3mNiZj8TiuQgVP4XN8cSUP3mLv99f_z9KUE7oUlk_m4QyX1lCF5ST8NZ6mad0PyVo5352aBXkjqPZHSezBGKwEOiTB6PI1LjfaSXpg0zVFb0asnJ4sNw_onFSvDYsPrBSUqCyDvk9Fz5e6wllG52JV1o4Z9OaxJi-cp9rBoGIe-HC6DDBTADbrjUlOihwnd0exZl9CJjXtquwZfRkrU9I-e38okeR949SYYZf5BfSW-xlpmcFN44poflSOeIxcJgS58N-nlthpBBz1ZOUZxyN8u1CRBOUloeLjL_xtBhhKJEWMMQPM0A7q87_B-ejyNFIOnZfT3ZDcpjGIGYGi4XJH0oDwmXLKXFMGL81Rh8QBng-gFgZgyKQymiPSL9I1zuDd5r1hccyRr03BSzX9uWRqIdKZYHKvoKS7NkJXi4FZ75IrVIfBtdegcQ_d_
' Generated on: 2025-11-29T11:53:32.069629900

@startuml
skinparam classAttributeIconSize 0
hide circle

class FileHandler {
  +{static} readSystemFromFile(filename: String): LinearSystem
  +{static} writeResultToFile(filename: String, result: Result, system: LinearSystem): void
  -{static} matrixToVector(matrix: Matrix): Vector
  +{static} writeMatrixToFile(filename: String, matrix: Matrix): void
}

class GaussSeidelSolver {
  +solve(system: LinearSystem): Result
}

class GaussSolver {
  -partialPivoting: boolean = true
  --
  +setPartialPivoting(partialPivoting: boolean): void
  +solve(system: LinearSystem): Result
  -partialPivot(A: Matrix, b: Vector, row: int): void
}

class JacobiSolver {
  +solve(system: LinearSystem): Result
}

abstract class LinearSolver {
  #iterations: int
  #computationTime: long
  #maxIterations: int = 1000
  #tolerance: double = 1e-10
  --
  +solve(system: LinearSystem): Result
  +getIterations(): int
  +getComputationTime(): long
  +setMaxIterations(maxIterations: int): void
  +setTolerance(tolerance: double): void
  #validateSystem(system: LinearSystem): void
  #calculateResidual(system: LinearSystem, solution: Vector): double
  -matrixToVector(matrix: Matrix): Vector
}

class LinearSolverApp {
  -currentSystem: LinearSystem
  -currentResult: Result
  -outputArea: JTextArea
  -matrixInput: JTextField
  -vectorInput: JTextField
  --
  +LinearSolverApp()
  -initializeComponents(): void
  -configureIterativeSolver(solver: LinearSolver): void
  +{static} main(args: String[]): void
}

class LoadFileListener {
  +actionPerformed(e: ActionEvent): void
}

class ManualInputListener {
  +actionPerformed(e: ActionEvent): void
}

class GaussListener {
  +actionPerformed(e: ActionEvent): void
}

class JacobiListener {
  +actionPerformed(e: ActionEvent): void
}

class GaussSeidelListener {
  +actionPerformed(e: ActionEvent): void
}

class AnalyzeListener {
  +actionPerformed(e: ActionEvent): void
}

class SaveListener {
  +actionPerformed(e: ActionEvent): void
}

class LinearSystem {
  -A: Matrix
  -b: Vector
  --
  +LinearSystem(A: Matrix, b: Vector)
  +getA(): Matrix
  +getB(): Vector
  +getSize(): int
  +setA(A: Matrix): void
  +setB(b: Vector): void
  +toString(): String
}

class Matrix {
  -data: double
  -rows: int
  -cols: int
  --
  +Matrix(rows: int, cols: int)
  +Matrix(data: double[][])
  +getRows(): int
  +getCols(): int
  +get(i: int, j: int): double
  +set(i: int, j: int, value: double): void
  +copy(): Matrix
  +transpose(): Matrix
  +multiply(other: Matrix): Matrix
  +add(other: Matrix): Matrix
  +{static} identity(size: int): Matrix
  +{static} random(rows: int, cols: int): Matrix
  +toString(): String
  +toCompactString(): String
}

class Result {
  -solution: Vector
  -message: String
  -iterations: int
  -computationTime: long
  -residual: double
  -determinant: double
  -rank: int
  --
  +Result(solution: Vector, message: String, iterations: int, computationTime: long)
  +Result(solution: Vector, message: String, iterations: int, computationTime: long, residual: double)
  +getSolution(): Vector
  +getMessage(): String
  +getIterations(): int
  +getComputationTime(): long
  +getResidual(): double
  +getDeterminant(): double
  +getRank(): int
  +setDeterminant(determinant: double): void
  +setRank(rank: int): void
  +toString(): String
}

class Validator {
  +{static} validateSystem(system: LinearSystem): ValidationResult
  +{static} isDiagonallyDominant(A: Matrix): boolean
  +{static} calculateDeterminant(A: Matrix): double
  +{static} calculateRank(A: Matrix): int
}

class ValidationResult {
  -valid: boolean
  -message: String
  --
  +ValidationResult(valid: boolean, message: String)
  +isValid(): boolean
  +getMessage(): String
}

class Vector {
  +Vector(size: int)
  +Vector(data: double[])
  +getSize(): int
  +get(i: int): double
  +set(i: int, value: double): void
  +dotProduct(other: Vector): double
  +norm(): double
  +add(other: Vector): Vector
  +subtract(other: Vector): Vector
  +multiply(scalar: double): Vector
  +toArray(): double[]
  +{static} fromArray(data: double[]): Vector
  +toString(): String
}

FileHandler ..> LinearSystem
FileHandler ..> Result
FileHandler ..> Matrix
FileHandler ..> Vector
GaussSeidelSolver --|> LinearSolver
GaussSeidelSolver ..> LinearSystem
GaussSeidelSolver ..> Result
GaussSolver --|> LinearSolver
GaussSolver ..> LinearSystem
GaussSolver ..> Result
GaussSolver ..> Matrix
GaussSolver ..> Vector
JacobiSolver --|> LinearSolver
JacobiSolver ..> LinearSystem
JacobiSolver ..> Result
LinearSolver ..> LinearSystem
LinearSolver ..> Result
LinearSolver ..> Vector
LinearSolver ..> Matrix
LinearSolverApp *-- LinearSystem
LinearSolverApp *-- Result
LinearSolverApp ..> LinearSolver
LinearSystem *-- Matrix
LinearSystem *-- Vector
Matrix ..> Matrix
Result *-- Vector
Validator ..> LinearSystem
Validator ..> ValidationResult
Validator ..> Matrix
Vector --|> Matrix
Vector ..> Vector
@enduml